weird spacing on pages with subhead() fix

--- a/htdocs/css/mellivora.css
+++ b/htdocs/css/mellivora.css
@@ -42,6 +42,7 @@ body {
     border-bottom-color: #FF6600; 
     padding: 10px 0px; 
     margin-left: 15px; 
+	margin-bottom: -5px;
     margin-right: 15px;  
 } 
  
